--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="./index.css">
-  <script defer type="module" src="./index.js"></script>
 </head>
 
 <body>
@@ -15,10 +14,12 @@
     <div class="row col d-flex justify-content-center">
       <h1 class="row col d-flex justify-content-center">Busca a tu WAIFU favorita</h1>
       <button id="button">Random waifu</button>
-      <div id="waifu">
+      <div class="d-flex flex-wrap" id="waifu">
       </div>
     </div>
   </div>
+
 </body>
+<script type="module" src="./index.js"></script>
 
 </html>
