Waifus de gato clicables 0.0.3 #3
En esta nueva version podemos clicar en las imagenes de las waifus gatunas para
ir a la imagen original y poder ver al author de la waifu gatuna

--- a/src/index.html
+++ b/src/index.html
@@ -12,11 +12,13 @@
 <body>
   <div class="container">
     <div class="row col d-flex justify-content-center">
-      <h1 class="row col d-flex justify-content-center">Busca a tu WAIFU favorita</h1>
-      <button id="button">Random waifu</button>
-      <div class="d-flex flex-wrap" id="waifu">
-      </div>
+      <h1 class="display-6 row col d-flex justify-content-center">Busca a tu WAIFU favorita</h1>
+      <button class="btn btn-dark" id="button">Random waifu</button>
+      <a href="">
+        <div class="d-flex flex-wrap justify-content-center" id="waifu">
+      </a>
     </div>
+  </div>
   </div>
 
 </body>
