Las hermanas neko-pan corrigieron errores #8
- Mimi-nya centro el texto uwu
- Kokori-nya hizo mas lindo el README >-<
- Hitori-nya resulvio errores de API o.o
- Riko-nya elimino dependecias y arreglo scroll event n.n

--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,13 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <!-- <link rel="stylesheet" href="./index.css"> -->
 </head>
-
 <body>
-  <div class="container" id="home">
-    <nav class="container d-flex flex-column justify-content-center position-fixed bg-white pb-2" style="z-index: 2000;" id="main">
-      <h1 class="display-6 row col d-flex justify-content-center">Busca a tu WAIFU favorita</h1>
-      <button class="btn btn-dark" id="button">Random waifu</button>
+  <div id="home">
+    <nav class="d-flex flex-column justify-content-center align-items-center position-fixed bg-white pb-2 w-100 shadow" id="main" style="z-index: 2000;">
+      <h1 class="display-6 d-flex justify-content-center text-center" id="title">Busca a tu WAIFU favorita</h1>
+      <button class="btn btn-dark w-75" id="button">Random waifu</button>
     </nav>
-    <div class="row col d-flex justify-content-center">
+    <div class="d-flex justify-content-center w-100">
       <!-- Remove anchor tag -->
       <div class="mt-5 pt-5 d-flex flex-wrap justify-content-center" id="waifu">
     </div>
