--- a/src/index.html
+++ b/src/index.html
@@ -9,21 +9,25 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <!-- <link rel="stylesheet" href="./index.css"> -->
 </head>
+
 <body>
   <div id="home">
-    <nav class="d-flex flex-column justify-content-center align-items-center position-fixed bg-white pb-2 w-100 shadow" id="main" style="z-index: 2000;">
+    <nav class="d-flex flex-column justify-content-center align-items-center position-fixed bg-white pb-2 w-100 shadow"
+      id="main" style="z-index: 2000;">
       <h1 class="display-6 d-flex justify-content-center text-center" id="title">Busca a tu WAIFU favorita</h1>
       <button class="btn btn-dark w-75" id="button">Random waifu</button>
     </nav>
     <div class="d-flex justify-content-center w-100">
       <!-- Remove anchor tag -->
-      <div class="mt-5 pt-5 d-flex flex-wrap justify-content-center" id="waifu">
+      <div class="mx-5 mt-5 pt-5 d-flex flex-wrap justify-content-center" id="waifu">
+      </div>
     </div>
   </div>
-  </div>
   <a href="#home">
-    <button class="position-fixed bottom-0 end-0 btn btn-dark m-3" style="visibility: hidden; display: none; width: 30px; height: 30px; box-sizing: border-box;" id="up">
-      <i class="bi bi-arrow-up-short" style="font-size: 20px; z-index: 2000; color: white; display: flex; justify-content: center; align-items: center;"></i>
+    <button class="position-fixed bottom-0 end-0 btn btn-dark m-3"
+      style="visibility: hidden; display: none; width: 30px; height: 30px; box-sizing: border-box;" id="up">
+      <i class="bi bi-arrow-up-short"
+        style="font-size: 20px; z-index: 2000; color: white; display: flex; justify-content: center; align-items: center;"></i>
     </button>
   </a>
 </body>
